[tool.poetry]
name = "chainstate"
version = "0.1.3"
description = "A simple state chain library for Python"
authors = ["Magnus Friberg <magnus.uno.friberg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"